fixed advertising card on mobile

--- a/css/advertising.css
+++ b/css/advertising.css
@@ -87,15 +87,19 @@
     color: var(--advertising__contents-color);
     font-weight: bold;
     font-size: 29px;
-    padding: 0.5rem;
+    /* padding: 0.5rem; */
     text-align: left;
+}
+
+.advertising__food-contents-bottom {
+    margin-top: -10px;
 }
 
 .advertising__discount-contents {
     color: var(--advertising__contents-color);
     font-weight: bold;
     font-size: 29px;
-    padding: 0.5rem;
+    padding: 1rem;
     text-align: center;
 }
 
@@ -114,10 +118,16 @@
     background-color: var(--advertising__bg-link-alt);
 }
 
+.advertising__center-link {
+    text-align: center;
+}
+
 .advertising__food {
     background-image: url(../img/advertising/advertising-dog-food.jpg);
     min-width: 272px;
     min-height: 284px;
+    max-width: 570px;
+    max-height: 348px;
     margin: 1rem;
     padding: 1rem;
     background-size: cover;
@@ -125,10 +135,13 @@
 
 .advertising__discount {
     background-image: url(../img/advertising/advertising_bone.jpg);
-    width: 100%;
-    margin: 2rem;
+    min-width: 272px;
+    min-height: 284px;
+    max-width: 570px;
+    max-height: 348px;
+    margin: 1rem;
     padding: 1rem;
-    background-size: contain;
+    background-size: cover;
 }
 
 @media (min-width: 1085px) {
